k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-service
spec:
  selector:
    app: nodejs
  ports:
    - port: 80
      targetPort: 3001
  type: ClusterIP
